Check if closing tabs should be targeted

During event dispatching, tab strip wasn't checking
closing tabs. So, if users middle clicks tab multiple times,
events fired when it's closing won't be delivered to the tab.
This makes it slow to close multiple tabs.

Bug: 920902
Change-Id: I4ba7159ee52d9a82655626e504cbdc543c5b40a9
Reviewed-on: https://chromium-review.googlesource.com/c/1414743
Commit-Queue: Sang Woo Ko <sangwoo108@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#625089}
Former-commit-id: e0cb63170b27e62ffc5dd1b94886e88d886a6542